--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "expo-cli": "^6.3.12",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest": "~29.7.0",
+    "jest-expo": "^52.0.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
