--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.25",
@@ -30,7 +31,9 @@
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
-    "firebase": "^11.1.0",
+    "firebase": "^11.2.0",
+    "i": "^0.3.7",
+    "npm": "^11.0.0",
     "phosphor-react-native": "^2.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
